disabled sass, quotes

--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -308,9 +308,9 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"]
     &[disabled], &[readonly]
-        cursor: default
         cursor: not-allowed // Set the [X] cursor while hovering a disabled link
         opacity: .5
+        // cursor: default
 
 // =====================
 // === IDs / Uniques ===
