balls, smaller text, thiccer box, attr cookies

--- a/static/sass/post-color.sass
+++ b/static/sass/post-color.sass
@@ -6,6 +6,9 @@
         background-color: $color
         color: $text
 
+#balls
+    @include post(#f29900)
+
 #feedback
     @include post(#920954)
 
