undo fix span max

--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -391,8 +391,8 @@ div.box
     vertical-align: middle
     box-shadow: 1.5ch 1.5ch black
 
-    & span
-        max-width: calc(100% - $box-padding)
+    // & span
+    //     max-width: calc(100% - $box-padding)
 
 // ===============
 // === Classes ===
