counting, jsb init, rss gen gives more info

--- a/static/sass/post-color.sass
+++ b/static/sass/post-color.sass
@@ -6,6 +6,9 @@
         background-color: $color
         color: $text
 
+#counter
+    @include post(#3e0992)
+
 #balls
     @include post(#f29900)
 
