--- a/static/sass/post-color.sass
+++ b/static/sass/post-color.sass
@@ -6,6 +6,9 @@
         background-color: $color
         color: $text
 
+#stick
+    @include post(#802d4c)
+
 #counter
     @include post(#3e0992)
 
