--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -2,7 +2,7 @@
 
 // botched way to have dynamic css variables (sass variables need reload to update :p)
 @function css-var($color-name)
-    @return var(--#{$color-name})
+    @return var(#{$color-name})
 
 // =================
 // === Variables ===
@@ -10,7 +10,7 @@
 $font-size: 12px
 $code-radius: 5px
 $transition-time: 250ms
-$border-dash: thin dashed css-var(text-color)
+$border-dash: thin dashed css-var(--text-color)
 
 $box-padding: 2em
 $body-width: 52em
@@ -33,8 +33,8 @@ $body-margin-side: 2em
     scrollbar-width: thin // "auto" or "thin"
 
     &::selection
-        background-color: css-var(outside-bg-color)
-        color: css-var(text-color-inverse)
+        background-color: css-var(--outside-bg-color)
+        color: css-var(--text-color-inverse)
 
 html
     overflow-y: scroll //stackoverflow.com/a/7607206/7833617
@@ -48,20 +48,20 @@ body
     font-size: $font-size
     max-width: $body-width
     margin: auto
-    color: css-var(text-color)
-    background-color: css-var(outside-bg-color)
+    color: css-var(--text-color)
+    background-color: css-var(--outside-bg-color)
     text-align: justify
 
     &::-webkit-scrollbar
         width: 10px // width of the entire scrollbar
 
     &::-webkit-scrollbar-track
-        background: css-var(outside-bg-color) // color of the tracking area
+        background: css-var(--outside-bg-color) // color of the tracking area
 
     &::-webkit-scrollbar-thumb
-        background-color: css-var(outside-bg-color) // color of the scroll thumb
+        background-color: css-var(--outside-bg-color) // color of the scroll thumb
         border-radius: 5px // roundness of the scroll thumb
-        border: 2px solid css-var(inside-bg-color) // creates padding around scroll thumb
+        border: 2px solid css-var(--inside-bg-color) // creates padding around scroll thumb
 
 input
     &, & + label, label + &
@@ -70,8 +70,8 @@ input
     &[type="text"],
     &[type="number"]
         font-family: 'PT Mono', monospace !important
-        background-color: css-var(code-bg-color)
-        color: css-var(inside-bg-color)
+        background-color: css-var(--code-bg-color)
+        color: css-var(--inside-bg-color)
 
         border-radius: $code-radius
         font-size: $font-size
@@ -96,10 +96,10 @@ input
     &[type="range"],
     &[type="button"],
     &[type="checkbox"]:checked
-        accent-color: css-var(outside-bg-color)
+        accent-color: css-var(--outside-bg-color)
 
 *:focus-visible
-    outline: css-var(outside-bg-color) auto 1px
+    outline: css-var(--outside-bg-color) auto 1px
 
 button
     font-size: 150%
@@ -111,23 +111,23 @@ button
     transition-duration: $transition-time
 
     // dark default
-    background-color: css-var(code-bg-color)
-    color: css-var(inside-bg-color)
+    background-color: css-var(--code-bg-color)
+    color: css-var(--inside-bg-color)
 
     @media (prefers-color-scheme: light)
-        background-color: css-var(bg-color)
-        color: css-var(text-color)
+        background-color: css-var(--bg-color)
+        color: css-var(--text-color)
 
     &:hover
         box-shadow: 5px 5px black
 
-        // background-color: css-var(text-color)
-        color: css-var(text-color-inverse)
+        // background-color: css-var(--text-color)
+        color: css-var(--text-color-inverse)
         filter: brightness(1.35)
 
         @media (prefers-color-scheme: light)
             background-color: rgba(221, 221, 221, 0.7)
-            color: css-var(code-bg-color)
+            color: css-var(--code-bg-color)
             filter: brightness(0.95)
 
     &:active // click
@@ -135,9 +135,9 @@ button
 
 a,
 a:visited
-    // I undestand this enough to know that it's good enuogh as is and that is alright
+    // I undestand this enough to know that it's good enuogh as is
     text-decoration: none
-    box-shadow: inset 0 -0.14em 0 css-var(outside-bg-color)
+    box-shadow: inset 0 -0.14em 0 css-var(--outside-bg-color)
     color: black
     transition-property: background-color
     transition-timing-function: ease-in-out
@@ -147,29 +147,31 @@ a:visited
         margin-bottom: 0
 
     &:hover
-        background-color: css-var(outside-bg-color)
-        color: css-var(inside-bg-color)
+        background-color: css-var(--outside-bg-color)
+        color: css-var(--inside-bg-color)
         box-shadow: none
 
         &::selection,
         & *::selection
-            background-color: css-var(text-color-inverse)
-            color: css-var(text-color)
+            background-color: css-var(--text-color-inverse)
+            color: css-var(--text-color)
 
     &::selection,
     & *::selection
-        background-color: css-var(text-color)
+        background-color: css-var(--text-color)
 
     &.inverse-bg
-        color: css-var(text-color-inverse)
+        color: css-var(--text-color-inverse)
         filter: invert(100%)
 
         &:hover::selection,
         &:hover *::selection
-            background-color: css-var(text-color-inverse)
-            color: css-var(text-color)
+            background-color: css-var(--text-color-inverse)
+            color: css-var(--text-color)
 
-    &.no-custom, img &
+    &.no-custom,
+    img &,
+    &.spoil
         box-shadow: none
 
         &:hover
@@ -182,7 +184,7 @@ a:visited
 hr
     border: none
     border-top: $border-dash
-    color: css-var(text-color)
+    color: css-var(--text-color)
 
     overflow: visible
     background: transparent
@@ -190,7 +192,7 @@ hr
     margin: 0.5em 0
 
     &.double
-        border-top: medium double css-var(text-color)
+        border-top: medium double css-var(--text-color)
 
 fieldset
     text-align: center
@@ -202,8 +204,8 @@ code,
     font-family: 'PT Mono', monospace !important
     padding: 2px 4px
     font-size: 90%
-    background-color: css-var(code-bg-color) !important
-    color: css-var(text-color-inverse)
+    background-color: css-var(--code-bg-color) !important
+    color: css-var(--text-color-inverse)
     border-radius: $code-radius
 
     &::selection,
@@ -269,7 +271,7 @@ p
         margin: 0.25em 0 1em
 
 blockquote
-    border-left: 1.25ch solid css-var(inside-bg-color)
+    border-left: 1.25ch solid css-var(--inside-bg-color)
     filter: brightness(95%) // botched way to darken the color
     margin: 1em 1.25ch 1.5em
     padding: 0.5em 1.25ch
@@ -327,13 +329,13 @@ h1
 
 h2
     font-size: 112%
-    margin-top: 1.25em
+    margin-top: 1.75em
     &::before
         content: '## '
 
 h3
     font-size: 105%
-    margin-top: 1.25em
+    margin-top: 1.75em
     &::before
         content: '### '
 
@@ -408,15 +410,21 @@ div.nav
     font-size: 115%
     margin-bottom: 1em
 
+    font-weight: bold !important  // bold slashes
+
     & > a
-        margin: 0 0.25em // adds padding between slashes
+        font-variant: small-caps
+
+        font-weight: initial !important  // unbold path
+        font-style: italic
+        margin: 0 0.25em // padding between slashes
 
         &:first-child
             margin-left: 0
 
         &:last-child,
         strong
-            font-weight: 600
+            font-weight: bold !important  // bold last
 
 div.box
     padding: $box-padding
@@ -427,7 +435,7 @@ div.box
 
     overflow: hidden
 
-    background: css-var(inside-bg-color)
+    background: css-var(--inside-bg-color)
     overflow-wrap: break-word
     vertical-align: middle
     box-shadow: 1.5ch 1.5ch black
@@ -490,26 +498,27 @@ img.dropdown
             all: unset
 
 .sc // small caps
-    font-variant: small-caps
+    font-variant: all-small-caps
     font-weight: bold
     font-size: 120%
 
-    display: inline-block // for ::first-letter
-    &::first-letter
-        font-size: 100%
-        font-weight: bolder
+    // font-variant: small-caps
+    // display: inline-block // for ::first-letter
+    // &::first-letter
+    //     font-size: 100%
+    //     font-weight: bold
 
     @at-root i#{&},    // https://github.com/sass/sass/issues/1425#issuecomment-55114453
     &.big
         // font-size: 125%
         // text-transform: lowercase
 
-        font-size: 85%
+        // font-size: 85%
         text-transform: uppercase
         // makes more sese that text becomes capitalised
 
-        &::first-letter
-            font-size: unset
+        // &::first-letter
+        //     font-size: unset
 
             // bruh https://bugs.chromium.org/p/chromium/issues/detail?id=17528
             // &::selection
@@ -523,3 +532,52 @@ s,
     text-decoration: none
     background-image: linear-gradient(transparent .5em,#000000 .5em,#000000 9px,transparent 9px)
     // ^make strike line thicc
+
+spoil,
+a.spoil
+    background-color: css-var(--code-bg-color)
+    color: css-var(--code-bg-color)
+
+    &:active,
+    &:focus,
+    &:hover
+        background-color: unset
+        color: unset
+
+
+// todo is there a better method?
+.grid
+    display: inline-grid
+    text-align: center
+    grid-row-gap: .5ch
+
+    &.five
+        grid-template-columns: repeat(5, 1fr)
+
+    &.four
+        grid-template-columns: repeat(4, 1fr)
+
+    &.three
+        grid-template-columns: repeat(3, 1fr)
+
+    &.two
+        grid-template-columns: repeat(2, 1fr)
+
+    &.one
+        grid-template-columns: repeat(1, 1fr)
+
+// .hover>img:last-child {
+//     display: none;
+// }
+
+// .hover>img:first-child {
+//     display: block;
+// }
+
+// .hover:hover>img:last-child {
+//     display: block;
+// }
+
+// .hover:hover>img:first-child {
+//     display: none;
+// }
