--- a/static/sass/post-color.sass
+++ b/static/sass/post-color.sass
@@ -6,6 +6,9 @@
         background-color: $color
         color: $text
 
+#exists
+    @include post(#510069)
+
 #stick
     @include post(#802d4c)
 
