--- a/static/sass/post-color.sass
+++ b/static/sass/post-color.sass
@@ -6,6 +6,9 @@
         background-color: $color
         color: $text
 
+#orthodoxy
+    @include post(#250808)
+
 #exists
     @include post(#510069)
 
