--- a/static/sass/post-color.sass
+++ b/static/sass/post-color.sass
@@ -6,6 +6,9 @@
         background-color: $color
         color: $text
 
+#us
+    @include post(#113f77)
+
 #orthodoxy
     @include post(#250808)
 
