--- a/static/sass/home.sass
+++ b/static/sass/home.sass
@@ -18,7 +18,8 @@ table.about
 
             &::before
                 content: '* '
-                vertical-align: sub
+                vertical-align: text-top
+                // vertical-align: baseline
                 margin-right: 2px
 
         &:nth-of-type(2)
