--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -311,11 +311,21 @@ li
     padding-left: 0
     margin: 0.66ch 0
 
+
+    // & li
+    //     margin-left: 2ch
+
+
     ul &::marker
         content: '- '
 
-    ol &::marker
-        content: '* '
+    ol &
+        &::marker
+            content: ''
+
+        &::before
+            content: '* '
+            vertical-align: text-top
 
 h1 + h2, h2 + h3, h3 + h4
     margin-top: .75em
@@ -412,6 +422,7 @@ input[type="button"]
 
     &::before
         content: '* '
+        vertical-align: text-top
 
     &::after
         content: ' :: '
