--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -608,8 +608,8 @@ a.spoil
     text-decoration-style: dotted
     text-decoration-line: underline
 
-    &::hover, &::focus, &::active
-        text-decoration-style: solid
+    // &:hover
+    //     text-decoration-style: solid
 
 .footnote-container
     position: absolute
