--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -304,6 +304,9 @@ img
     // article &
         // margin: .5em 0 0 0
 
+    &.flip
+        transform: scaleX(-1)
+
 p
     margin: 0.5em 0
     text-align: justify
