--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -614,6 +614,13 @@ a.spoil
     // &:hover
     //     text-decoration-style: solid
 
+    &[img-footnote]
+        color: darkturquoise
+        text-decoration-color: darkturquoise
+        font-weight: bold
+        text-decoration-thickness: 2px
+        // max-width: 400px; line-height: 0
+
 .footnote-container
     position: absolute
     background-color: css-var(--inside-bg-color)
